fix overflow-x bug, add some style for features-lg tablet section

--- a/style.css
+++ b/style.css
@@ -95,6 +95,13 @@
 
   h1,
   h2,
+  h3,
+  p {
+    text-wrap: balance;
+  }
+
+  h1,
+  h2,
   h3 {
     font-family: var(--ff-mono);
     margin: 0;
@@ -142,6 +149,10 @@
     &.fb-col {
       display: grid;
       grid-template-columns: 1fr repeat(3, calc(calc(100% - 64px) / 3)) 1fr;
+
+      @media (width >= calc(700 / 16 * 1rem)) {
+        grid-template-columns: 1fr repeat(6, calc(calc(100% - 80px) / 6)) 1fr;
+      }
     }
 
     &.small {
@@ -311,6 +322,7 @@
 
 @layer hero {
   .hero {
+    overflow-x: clip;
     > * {
       grid-row: 1;
     }
@@ -553,12 +565,18 @@
 
     .feature-lg {
       row-gap: 56px;
+      overflow-x: clip;
     }
 
     .feature-lg-img {
       border-radius: 50%;
       grid-column: 2 / 5;
       grid-row: 1 / 2;
+      justify-self: center;
+
+      @media (width >= calc(700 / 16 * 1rem)) {
+        grid-column: 3 / span 4;
+      }
     }
 
     .feature-lg-text {
@@ -567,6 +585,11 @@
       row-gap: 32px;
       justify-items: center;
       text-align: center;
+
+      @media (width >= calc(700 / 16 * 1rem)) {
+        grid-column: 2 / -2;
+        padding-inline: 80px;
+      }
     }
 
     .feature-lg-title {
